<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.AboutUsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_item"
            android:padding="10sp"
            android:backgroundTint="@color/bg_dark"
            android:background="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/body_about"
                android:layout_width="match_parent"
                android:layout_height="900dp"
                android:background="@drawable/bg_up"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout">

                <LinearLayout
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/coolvetica_rg"
                        android:text="@string/about_us_title_1"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/about_us_desc_1"
                        android:textColor="@color/black" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="60sp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccent"
                    app:layout_constraintTop_toBottomOf="@id/text1"
                    tools:layout_editor_absoluteX="65dp">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                    tools:layout_editor_absoluteX="85dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/coolvetica_rg"
                        android:text="@string/about_us_title_2"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/about_us_desc_2"
                        android:textColor="@color/black" />


                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="60sp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccent"
                    app:layout_constraintTop_toBottomOf="@id/text2"
                    tools:layout_editor_absoluteX="65dp">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                    tools:layout_editor_absoluteX="85dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/coolvetica_rg"
                        android:text="@string/about_us_title_3"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/about_us_desc_3"
                        android:textColor="@color/black" />


                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="60sp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccent"
                    app:layout_constraintTop_toBottomOf="@id/text3"
                    tools:layout_editor_absoluteX="65dp">

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
                    tools:layout_editor_absoluteX="85dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/coolvetica_rg"
                        android:text="Where to find us ?"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ic_youtube"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="20sp"
                            android:background="@drawable/circle"
                            android:backgroundTint="#FF0000"
                            android:padding="5dp"
                            android:src="@drawable/ic_youtube"
                            app:tint="@color/white" />

                        <ImageView
                            android:id="@+id/ic_tiktok"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="20sp"
                            android:background="@drawable/circle"
                            android:backgroundTint="@color/black"
                            android:padding="10dp"
                            android:src="@drawable/ic_tiktok"
                            app:tint="@color/white" />

                        <ImageView
                            android:id="@+id/ic_web"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/circle"
                            android:backgroundTint="#2DBCFF"
                            android:padding="10dp"
                            android:src="@drawable/ic_web"
                            app:tint="@color/white" />
                    </LinearLayout>


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>